[metadata]
name = quince
version = 0.2
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = Default implementation for Quincy
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/stackforge/stacktach-quince
keywords =
    stacktach
    rest
    api
    klugman
    quincy
    openstack
[files]
packages =
    quince
